Changelog
=========


1.0.1 (unreleased)
------------------

- Nothing changed yet.


1.0.0 (2018-04-04)
------------------

- Initial implementation
  [lgraf]