@@ -21,7 +21,7 @@ def parse_ip_range(ip_range):
     192.168.0.0/16
     192.168.1.1, 10.0.0.0/8
     """
-    ranges = [rng.strip() for rng in ip_range.split(',')]
+    ranges = [rng.strip() for rng in to_unicode(ip_range).split(u',')]
     networks = []
     for rng in ranges:
         try:
@@ -40,5 +40,18 @@ def permitted_ip(client_ip, ip_range):
     except InvalidIPRangeSpecification:
         return False
 
-    ip = ip_address(client_ip)
+    ip = ip_address(to_unicode(client_ip))
     return any(ip in net for net in allowed_networks)
+
+
+def to_unicode(ip_spec):
+    """Ensure ip_spec is unicode, decoding it if necessary.
+
+    The `ipaddress` module (as opposed to `py2-ipaddress`) absolutely
+    requires IP specifications to be passed in as unicode. We therefore make
+    sure the ip_spec is unicode, decoding it as ASCII if necessary (IP specs
+    should never contain any non-ASCII characters).
+    """
+    if not isinstance(ip_spec, unicode):
+        ip_spec = ip_spec.decode('ascii')
+    return ip_spec
