@@ -67,7 +67,7 @@ setup(name='ftw.tokenauth',
           # Other dependencies
           'cryptography',
           'ftw.profilehook',
-          'py2-ipaddress',
+          'ipaddress',
           'PyJWT',
       ],
       tests_require=tests_require,
