@@ -5,7 +5,9 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Switch to `ipaddress` module instead of `py2-ipaddress` for IP range
+  parsing, and fix unicode handling.
+  [lgraf]
 
 
 1.0.0 (2018-04-04)
